# Video-Sync-GUI-Rust

./: .chatpin  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PORT_TRACKER.csv  PORT_TRACKER.md  README.md  Rules.txt
crates/vsg-cli/: Cargo.toml
crates/vsg-cli/src/: analyze.rs  analyze_audio.rs  cmd_analyze.rs  extract.rs  main.rs  make_opts.rs  mux.rs  plan_merge.rs
crates/vsg-core/: Cargo.toml
crates/vsg-core/src/: analysis.rs  chapters.rs  config.rs  errors.rs  extract.rs  lib.rs  logging.rs  mkvmerge.rs  opts.rs  opts_tokens.rs  plan.rs  probe.rs  process.rs  tracks.rs  types.rs
crates/vsg-core/src/analysis/: ffmpeg_decode.rs  mod.rs  xcorr.rs
crates/vsg_core/: Cargo.toml
crates/vsg_core/src/: config.rs  favorite_colors.rs  font_manager.rs  job_discovery.rs  lib.rs  pipeline.rs
crates/vsg_core/src/analysis/: analyzer.rs  container_delays.rs  delay_selection.rs  drift_detection.rs  ffmpeg.rs  filtering.rs  global_shift.rs  mod.rs  peak_fit.rs  source_separation.rs  sync_stability.rs  track_selection.rs  tracks.rs  types.rs  videodiff.rs
crates/vsg_core/src/analysis/correlation/: confidence.rs  decode.rs  dense.rs  filtering.rs  gpu_backend.rs  gpu_correlation.rs  mod.rs  registry.rs  run.rs
crates/vsg_core/src/analysis/delay_selection/: average.rs  first_stable.rs  mod.rs  mode.rs  mode_clustered.rs  mode_early.rs
crates/vsg_core/src/analysis/methods/: gcc_phat.rs  gcc_scot.rs  mod.rs  scc.rs  whitened.rs
crates/vsg_core/src/audit/: mod.rs  trail.rs
crates/vsg_core/src/chapters/: extractor.rs  keyframes.rs  mod.rs  parser.rs  process.rs  processor.rs  shifter.rs  snapper.rs  types.rs
crates/vsg_core/src/config/: manager.rs  mod.rs  settings.rs
crates/vsg_core/src/correction/: linear.rs  mod.rs  pal.rs
crates/vsg_core/src/correction/stepping/: audio_assembly.rs  boundary_refiner.rs  data_io.rs  edl_builder.rs  mod.rs  qa_check.rs  run.rs  timeline.rs  types.rs
crates/vsg_core/src/extraction/: attachments.rs  mkvextract.rs  mod.rs  probe.rs  tracks.rs  types.rs
crates/vsg_core/src/io/: runner.rs
crates/vsg_core/src/job_layouts/: manager.rs  mod.rs  persistence.rs  signature.rs  validation.rs
crates/vsg_core/src/jobs/: discovery.rs  layout.rs  mod.rs  queue.rs  signature.rs  types.rs
crates/vsg_core/src/logging/: job_logger.rs  mod.rs  types.rs
crates/vsg_core/src/models/: context_types.rs  converters.rs  enums.rs  jobs.rs  media.rs  mod.rs  settings.rs
crates/vsg_core/src/mux/: mod.rs  options_builder.rs
crates/vsg_core/src/orchestrator/: errors.rs  mod.rs  pipeline.rs  step.rs  types.rs  validation.rs
crates/vsg_core/src/orchestrator/steps/: analysis_step.rs  analyze.rs  attachments.rs  attachments_step.rs  audio_correction.rs  audio_correction_step.rs  chapters.rs  chapters_step.rs  context.rs  extract.rs  extract_step.rs  mod.rs  mux.rs  mux_step.rs  subtitles.rs  subtitles_step.rs
crates/vsg_core/src/pipeline_components/: log_manager.rs  mod.rs  output_writer.rs  result_auditor.rs  sync_executor.rs  sync_planner.rs  tool_validator.rs
crates/vsg_core/src/postprocess/: chapter_backup.rs  final_auditor.rs  finalizer.rs  mod.rs
crates/vsg_core/src/postprocess/auditors/: attachments.rs  audio_channels.rs  audio_object_based.rs  audio_quality.rs  audio_sync.rs  base.rs  chapters.rs  codec_integrity.rs  dolby_vision.rs  drift_correction.rs  frame_audit.rs  global_shift.rs  language_tags.rs  mod.rs  neural_confidence.rs  stepping_correction.rs  subtitle_clamping.rs  (+5 more)
crates/vsg_core/src/reporting/: debug_manager.rs  debug_paths.rs  mod.rs  report_writer.rs
crates/vsg_core/src/subtitles/: checkpoint_selection.rs  data.rs  edit_plan.rs  mod.rs  style_engine.rs  sync_dispatcher.rs  sync_modes.rs  sync_utils.rs  track_processor.rs
crates/vsg_ui/: .qmlls.ini  Cargo.toml  build.rs
crates/vsg_ui/qml/: AddJobDialog.qml  BatchCompletionDialog.qml  FavoritesDialog.qml  FontManagerDialog.qml  JobQueueDialog.qml  MainWindow.qml  ManualSelectionDialog.qml  OCRDictionaryDialog.qml  OptionsDialog.qml  ReportViewerDialog.qml  ResampleDialog.qml  SourceSettingsDialog.qml  SyncExclusionDialog.qml  TrackSettingsDialog.qml  TrackWidget.qml  main.qml
crates/vsg_ui/qml/subtitle_editor/: SubtitleEditorWindow.qml
crates/vsg_ui/src/: add_job_dialog.rs  app.rs  job_queue.rs  lib.rs  main.rs  manual_selection.rs  settings.rs  theme.rs
crates/vsg_ui/src/bridge/: app_controller.rs  mod.rs  test_minimal.rs
crates/vsg_ui/src/bridges/: add_job_logic.rs  batch_completion_logic.rs  events_table_logic.rs  favorites_logic.rs  filtering_tab_logic.rs  font_manager_logic.rs  fonts_tab_logic.rs  job_queue_logic.rs  main_controller.rs  manual_selection_logic.rs  mod.rs  ocr_dictionary_logic.rs  options_logic.rs  report_viewer_logic.rs  resample_logic.rs  source_section_logic.rs  source_settings_logic.rs  styles_tab_logic.rs  subtitle_editor_logic.rs  sync_exclusion_logic.rs  track_settings_logic.rs  track_widget_logic.rs  video_panel_logic.rs  worker_signals.rs
crates/vsg_ui/src/core_integration/: mod.rs
crates/vsg_ui/src/cpp/: main_window.cpp  main_window.h
crates/vsg_ui/src/handlers/: analysis.rs  browse.rs  helpers.rs  job_queue.rs  manual_selection.rs  mod.rs  processing.rs  settings.rs  window.rs
crates/vsg_ui/src/options_dialog/: mod.rs  tabs.rs
crates/vsg_ui/src/pages/: main_window.rs  mod.rs
crates/vsg_ui/src/subtitle_editor/: mod.rs  tab_panel.rs
crates/vsg_ui/src/track_widget/: helpers.rs  mod.rs
crates/vsg_ui/src/widgets/: mod.rs  reorderable_list.rs  text_input_with_menu.rs
crates/vsg_ui/src/windows/: add_job.rs  job_queue.rs  manual_selection.rs  mod.rs  settings.rs  track_settings.rs
crates/vsg_ui/src/worker/: mod.rs  runner.rs
rust/: Cargo.toml
rust/vsg-cli/: Cargo.toml
rust/vsg-cli/src/: main.rs
rust/vsg-core/: Cargo.toml
rust/vsg-core/src/: error.rs  fsutil.rs  lib.rs  model.rs  probe.rs
rust/vsg-core/src/analyze/: audio_xcorr.rs  mod.rs  videodiff.rs
rust/vsg-core/src/extract/: mod.rs  run.rs  select.rs
rust/vsg-gui/: CARGO_HINT.txt  Cargo.toml
rust/vsg-gui/src/: config.rs  logger.rs  main.rs
(+148 files in other folders)
