[workspace]
resolver = "2"
members = [
    "crates/vsg_core",
    "crates/vsg_ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.83"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.7"
toml_edit = "0.25.5"

# Error handling
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"

# Async
tokio = { version = "1", features = ["full"] }

# Time
chrono = "0.4.44"

# Concurrency
parking_lot = "0.12.5"

# Audio/DSP
rustfft = "6.4.1"

# GPU / PyTorch (libtorch C++ bindings)
# download-libtorch: auto-downloads libtorch during build (like any cargo dep)
# For ROCm GPU: set TORCH_CUDA_VERSION=rocm7.1 before building
# Without that env var, downloads CPU version (still compiles, just no GPU accel)
tch = { version = "0.23.0", features = ["download-libtorch"] }

# Numerical arrays
ndarray = "0.17.2"

# XML
quick-xml = "0.39.2"

# Archive
zip = "8.3.1"

# Regex
regex = "1.11.1"

# Hashing
sha2 = "0.10.9"
md-5 = "0.10.6"

# Utilities
once_cell = "1.21.4"
uuid = { version = "1", features = ["v4"] }

# Image processing
image = "0.25.10"
opencv = "0.98.1"

# Spell checking
enchant = "0.3.0"

# Voice Activity Detection
webrtc-vad = "0.4.0"

# System
which = "8.0.2"

# Testing
tempfile = "3.27.0"
