[package]
name = "vsg-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
vsg-core = { path = "../vsg-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
