[package]
name = "vsg-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & core crate
anyhow = "1"
vsg-core = { path = "../vsg-core" }
