[package]
name = "vsg-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "vsg_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize", "overlapped-lists"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
camino = "1.1"
which = "6.0"
directories = "5.0"
time = { version = "0.3", features = ["formatting"] }
