[package]
name = "vsg-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core utils
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"

# Data / parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

# Paths & process helpers
camino = { version = "1", features = ["serde1"] }
which = "6"
