
[package]
name = "vsg-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
tracing = "0.1"
regex = "1"
camino = { version = "1", features = ["serde1"] }
quick-xml = "0.36"
time = { version = "0.3", features = ["formatting", "parsing"] }
