[package]
name = "vsg_core"
description = "Core library for Video Sync GUI - backend logic with no UI dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.9.11"
toml_edit = "0.24.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
chrono = "0.4.43"
parking_lot = "0.12.5"
rustfft = "6.4.1"
biquad = "0.5.0"
md5 = "0.7.0"
roxmltree = "0.20.0"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.24"
