[package]
name = "vsg_core"
description = "Core library for Video Sync GUI - backend logic with no UI dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
which = { workspace = true }
quick-xml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
