[package]
name = "vsg_ui"
description = "Video Sync GUI - GTK4/Relm4 user interface"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
# Core library
vsg_core = { path = "../vsg_core" }

# GTK4 / Relm4
gtk = { package = "gtk4", version = "0.10.3", features = ["v4_10"] }
relm4 = "0.10.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
