[package]
name = "vsg_ui"
description = "Video Sync GUI - CXX-Qt user interface"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
vsg_core = { path = "../vsg_core" }
serde = { workspace = true }
serde_json = { workspace = true }
