[package]
name = "vsg_ui"
description = "Video Sync GUI - CXX-Qt user interface"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-sync-gui"
path = "src/main.rs"

[dependencies]
vsg_core = { path = "../vsg_core" }
serde = { workspace = true }
serde_json = { workspace = true }
which = "7"

# CXX-Qt bindings
cxx = "1.0.95"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }

[build-dependencies]
cxx-qt-build = { version = "0.8.1", features = ["link_qt_object_files"] }
