[package]
name = "vsg-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6"

# ==== GUI stack pinned for stability ====
imgui = "0.12.0"
imgui-winit-support = "0.12.0"
imgui-glow-renderer = "0.12.0"
glow = "0.13.1"

winit = "0.29.15"
raw-window-handle = "0.5.2"

glutin = { version = "0.31.3", default-features = false, features = ["egl", "glx"] }
glutin-winit = "0.4.2"

# Core crate from your workspace
vsg-core = { path = "../vsg-core" }

[features]
default = []
