[package]
name = "vsg-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
imgui = "0.12.0"
imgui-winit-support = "0.12.0"
imgui-glow-renderer = "0.12.0"
glow = "0.13.1"

# Pin the windowing stack to a mutually compatible set (winit 0.29 + rwh 0.5 + glutin 0.30)
winit = { version = "0.29.15", default-features = false, features = ["x11", "wayland"] }
raw-window-handle = "0.5.2"
glutin = "0.30.10"
glutin-winit = "0.4.2"
log = "0.4"

[profile.release]
opt-level = 3

[package.metadata.vsg-notes]
# This crate is intentionally isolated to avoid pulling newer, incompatible transitive versions.
# If cargo tries to upgrade winit to 0.30 or glutin to 0.31+, use:
#   cargo update -p winit --precise 0.29.15
#   cargo update -p glutin --precise 0.30.10
